[tool.poetry]
name = "custom-calculator-api"
version = "0.1.0"
description = "A FastAPI application that acts as a custom calculator"
authors = ["Cozyamy <cozyamy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
pytest = "^8.1.1"
numpy-financial = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
